# Wheelchair-Simulation

./: .gitignore  README.md  left.bag  right.bag
Trajectory_Generation/: curve_fitting.py  get_basic_traj.py
Wheelchair 1.0/bagfiles/: README.md  _imu_left.csv  _imu_right.csv  convert_quat_to_euler.py  importData.sh
Wheelchair 1.0/imu data/: README.md
Wheelchair_1/: README.md
Wheelchair_1/wheelchair/: CMakeLists.txt  package.xml
Wheelchair_1/wheelchair/config/: diffdriver.yaml  velocity_controller_left.yaml  velocity_controller_right.yaml
Wheelchair_1/wheelchair/launch/: diffdriver.launch  display.launch  effortcontroller.launch  velcontroller.launch
Wheelchair_1/wheelchair/msg/: ModifiedIMU.msg
Wheelchair_1/wheelchair/scripts/: README.md  calculate_imu_for_wheelchair.py  imu_data_acquisition.py  quat_to_euler.py
Wheelchair_1/wheelchair_1_description/: CMakeLists.txt  package.xml
Wheelchair_1/wheelchair_1_description/urdf/: wheelchair.gazebo  wheelchair.urdf.xacro
Wheelchair_2/: README
bagfiles/: README.md  importData.sh  imu.bag
controller_recorder/: CMakeLists.txt  csv_ang_vel_publisher.py  csv_twist_publisher.py  get_data_subscriber.py  get_twist_subscriber.py  package.xml  test_filter.py
imu scripts/: rosbag_to_xlsx.sh
torque_controller/: CMakeLists.txt  csv_ang_vel_publisher.py  get_data_subscriber.py  package.xml  read_csv_publisher.py
wheelchair_data/: CMakeLists.txt  README.md  imu.bag  imu_to_wheelchair_data.py  package.xml  quat_to_euler.py  rosbag_to_xlsx.sh  wheelchair_data.py
wheelchairbot/: CMakeLists.txt  README.md  package.xml
(+59 files in other folders)
