<?xml version="1.0"?>
<package format="2">
  <name>wheelchair</name>
  <version>0.0.0</version>
  <description>The wheelchair package</description>
  <maintainer email="alexandra@todo.todo">alexandra</maintainer>
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
