<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_1_description</name>
  <version>0.0.0</version>
  <description>The wheelchair_1_description package</description>
  <maintainer email="alexandra@todo.todo">alexandra</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
